--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -13,10 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:fontFamily="@font/roboto"
         android:text="@string/audio_recorder"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="30sp" />
+        android:textSize="24sp" />
 
     <!--This will display the status of our app when
         we will record some audio and play that audio-->
@@ -48,29 +49,22 @@
             android:layout_weight="1"
             android:orientation="horizontal">
 
-            <TextView
+            <Button
                 android:id="@+id/btnRecord"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@color/purple_500"
-                android:padding="5dp"
-                android:text="@string/start_recording"
-                android:textAlignment="center"
-                android:textColor="@color/white" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="15dp"
 
-            <TextView
-                android:id="@+id/btnStop"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@color/purple_500"
-                android:padding="5dp"
-                android:text="@string/stop_recording"
-                android:textAlignment="center"
-                android:textColor="@color/white" />
+
+
+                android:paddingLeft="4dp"
+                android:text="@string/start_recording"
+                android:textColor="@color/white"
+                android:textStyle="bold" />
+
+
 
         </LinearLayout>
 
@@ -80,30 +74,23 @@
             android:layout_weight="1"
             android:orientation="horizontal">
 
-            <TextView
+            <Button
                 android:id="@+id/btnPlay"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@color/purple_500"
-                android:padding="5dp"
-                android:text="@string/play_recording"
-                android:textAlignment="center"
-                android:textColor="@color/white" />
-
-            <TextView
-                android:id="@+id/btnStopPlay"
-                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="15dp"
+
                 android:layout_weight="1"
-                android:background="@color/purple_500"
-                android:lines="2"
-                android:padding="5dp"
-                android:text="@string/stop_playing"
-                android:textAlignment="center"
-                android:textColor="@color/white" />
+
+
+                android:paddingLeft="4dp"
+                android:text="@string/play_recording"
+                android:textColor="@color/white"
+                android:textStyle="bold" />
+
+
+
         </LinearLayout>
 
         <!--Textview to stop audio recording
