--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -181,7 +181,52 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="Add a Payment Method" />
+                                android:text="Push Notification" />
+
+                            <Switch
+                                android:id="@+id/switch1"
+                                android:layout_width="100dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1" />
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <View
+                        android:id="@+id/divider"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="20dp"
+                        android:background="?android:attr/listDivider" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:paddingTop="10dp">
+
+                        <TextView
+                            android:id="@+id/textView7"
+                            style="@style/settings_item_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Other Services"
+                            android:textStyle="bold" />
+
+                        <LinearLayout
+                            style="@style/settings_item"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textView9"
+                                style="@style/settings_item_body"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Sentinel Device Protection" />
 
                             <ImageView
                                 android:id="@+id/imageView10"
@@ -204,13 +249,14 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="Push Notification" />
+                                android:text="Matrix Preowned Devices" />
 
-                            <Switch
-                                android:id="@+id/switch1"
-                                android:layout_width="100dp"
+                            <ImageView
+                                android:id="@+id/imageView10"
+                                android:layout_width="30dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1" />
+                                android:layout_weight="1"
+                                app:srcCompat="@drawable/ic_forward" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -226,13 +272,14 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="Dark Mode" />
+                                android:text="Sentinel Repair Service" />
 
-                            <Switch
-                                android:id="@+id/switch2"
-                                android:layout_width="100dp"
+                            <ImageView
+                                android:id="@+id/imageView10"
+                                android:layout_width="30dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1" />
+                                android:layout_weight="1"
+                                app:srcCompat="@drawable/ic_forward" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -248,7 +295,30 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="Change Password" />
+                                android:text="Sentiflex (Device Financing)" />
+
+                            <ImageView
+                                android:id="@+id/imageView10"
+                                android:layout_width="30dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                app:srcCompat="@drawable/ic_forward" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            style="@style/settings_item"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textView9"
+                                style="@style/settings_item_body"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Phone Swap " />
 
                             <ImageView
                                 android:id="@+id/imageView10"
@@ -278,31 +348,8 @@
                             style="@style/settings_item_title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="More"
+                            android:text="About"
                             android:textStyle="bold" />
-
-                        <LinearLayout
-                            style="@style/settings_item"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center_vertical"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/textView9"
-                                style="@style/settings_item_body"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="About Us" />
-
-                            <ImageView
-                                android:id="@+id/imageView10"
-                                android:layout_width="30dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                app:srcCompat="@drawable/ic_forward" />
-                        </LinearLayout>
 
                         <LinearLayout
                             style="@style/settings_item"
@@ -340,7 +387,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="Terms and Conditions" />
+                                android:text="Terms of use" />
 
                             <ImageView
                                 android:id="@+id/imageView10"
