--- a/app/src/main/res/drawable-nodpi/ass_list_bg.xml
+++ b/app/src/main/res/drawable-nodpi/ass_list_bg.xml
@@ -4,6 +4,8 @@
     >
     <corners
         android:radius="25dp"
+        android:bottomLeftRadius="0dp"
+        android:bottomRightRadius="0dp"
         />
 
     <stroke android:color="@color/hhash"
